--- a/index.html
+++ b/index.html
@@ -3,69 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suryaa - Portfolio</title>
+    <title>Your Name - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 1em 0;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
-        }
-        nav a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-        main {
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-        }
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-        }
-        .project {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            text-align: center;
-        }
-        .project img {
-            width: 100%;
-            border-radius: 5px;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -89,13 +28,13 @@
             <h2>My Projects</h2>
             <div class="projects">
                 <div class="project">
-                    <img src="https://via.placeholder.com/150" alt="Project 1">
+                    <img src="https://via.placeholder.com/300" alt="Project 1">
                     <h3>Project 1</h3>
                     <p>A brief description of Project 1.</p>
                     <a href="https://github.com/yourusername/project1">View on GitHub</a>
                 </div>
                 <div class="project">
-                    <img src="https://via.placeholder.com/150" alt="Project 2">
+                    <img src="https://via.placeholder.com/300" alt="Project 2">
                     <h3>Project 2</h3>
                     <p>A brief description of Project 2.</p>
                     <a href="https://github.com/yourusername/project2">View on GitHub</a>
@@ -108,7 +47,7 @@
             <h2>Contact Me</h2>
             <p>Feel free to reach out to me on any of the platforms below:</p>
             <ul>
-                <li>Email: your.email@example.com</li>
+                <li>Email: mtkgtps@gmail.com</li>
                 <li>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></li>
                 <li>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></li>
             </ul>
